[project]
name = "xudfs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chinese-stroke-sorting>=0.3.1",
    "dbfread>=2.0.7",
    "faker>=33.1.0",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "pyodbc>=5.2.0",
    "pypinyin>=0.53.0",
    "xlrd>=2.0.1",
    "xlwings>=0.33.14",
]
